--- a/homework/week1/index.html
+++ b/homework/week1/index.html
@@ -3,9 +3,14 @@
   <!-- Make sure to include jQuery *before* your own Javascript -->
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script src="./script.js"></script>
+  <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
 </head>
 <body>
-  <h1>Top Reddit Stories:</h1>
-  <ul id="list"></ul>
+  <div class="pure-menu pure-menu-open">
+    <a class="pure-menu-heading">Top Reddit Stories <button class="pure-button" id="refresh-button">Refresh</button> </a>
+
+    <ul id="list"></ul>
+    
+   </div>
 </body>
 </html>
